working scala